Fix 2API avatar
